# nex

./: .gitmodules  CMakeLists.txt  config.sh  requirements.txt
applications/: CMakeLists.txt
lib/: CMakeLists.txt
lib/python/: csv_parser.py
python/: CMakeLists.txt  setup.py.in
python/nex/: __init__.py  nex.cpp  nex.py
python/test/: __init__.py
